@@ -1,2 +1,19 @@
 # AppointmentScheduler
-Appointment Scheduling and Management software
+
+
+- Title: Appointment Scheduler
+- Purpose: GUI Software Application for managing Customers, Appointments, and other business information
+- Author: Joseph Rhodes, contact email: jrhod98@wgu.edu
+- Application Version: PRFA — QAM2
+- IDE: IntelliJ IDEA 2021.1.1 (Community Edition)
+- JDK: Java SE 11.0.13
+- JavaFX: JavaFX-SDK-17.0.1
+- How to run the program:
+    - In Intellij, go to Run->Edit Configurations
+    - Add a new Application configuration on main.main
+    - Add the following line to VM Options:
+        - --module-path C:\javafx-sdk-17.0.1\lib --add-modules javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.controls,javafx.base,javafx.fxml
+    - Hit Apply, OK, and then Run 'main'
+    
+- Additional Report: Total number of appointments for each Customer
+- MySQL Connector: mysql-connector-java-8.0.27
